--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,7 +24,7 @@
         <button class="main-menu__button-icon" type="button" aria-label="Открыть главное меню"></button>
 
 
-        <ul class="main-menu__list category-list">
+        <ul class="main-menu__list main-menu__category-list category-list">
           <li class="category-list__item">
             <a class="category-list__link" href="/catalog.html">Каталог товаров</a>
           </li>
@@ -33,16 +33,21 @@
           </li>
         </ul>
 
-        <ul class="main-menu__list user-list">
+        <ul class="main-menu__list main-menu__user-list user-list">
           <li class="user-list__item">
-            <a class="user-list__link">Поиск</a>
+            <a class="user-list__link">
+                <svg  class="user-list__link-img" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.6px" height="17.6px" viewBox="-0.8 -0.8 17.6 17.6" enable-background="new -0.8 -0.8 17.6 17.6" xml:space="preserve">
+                  <path fill="#231F20" d="M16.47,14.93l-3.415-3.415C14.02,10.226,14.6,8.634,14.6,6.899c0-4.253-3.447-7.699-7.7-7.699 S-0.8,2.646-0.8,6.899s3.446,7.7,7.699,7.7c1.734,0,3.326-0.58,4.613-1.546l3.417,3.416c0.203,0.202,0.418,0.33,0.771,0.33 c0.607,0,1.1-0.492,1.1-1.1C16.8,15.459,16.739,15.2,16.47,14.93z M1.399,6.899c0-3.038,2.462-5.5,5.5-5.5s5.5,2.462,5.5,5.5 s-2.462,5.5-5.5,5.5S1.399,9.938,1.399,6.899z"/>
+                </svg>
+            <p>Поиск</p>
+            </a>
           </li>
           <li class="user-list__item">
             <a class="user-list__link">Корзина: пока пуста</a>
           </li>
         </ul>
 
-        <ul class="main-menu__list desktop-list">
+        <ul class="main-menu__list main-menu__desktop-list desktop-list">
           <li class="desktop-list__item">
             <a class="desktop-list__link">Новые поступления</a>
           </li>
@@ -50,6 +55,8 @@
             <a class="desktop-list__link">Распродажа</a>
           </li>
         </ul>
+
+        <span class="main-menu__list main-menu__delivery-list">Бесплатная доставка по&nbsp;России</span>
 
       </nav>
     </div>
@@ -135,32 +142,36 @@
 
   </main>
 
-  <footer class="page-footer">
-      <div class="page-footer__wrapper">
+<footer class="page-footer">
+  <div class="page-footer__wrapper">
 
-        <ul class="social">
-          <li>
-            <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм"></a>
-          </li>
-          <li>
-            <a class="social__link social__link--fb" href="#" aria-label="Фэйсбук"></a>
-          </li>
-          <li>
-            <a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a>
-          </li>
-        </ul>
-
-        <div class="page-footer__copyright copyright">
-          <a class="copyright__logo" href="#">
-            <img src="/img/logo-mobile.svg" alt="Mishka">
-          </a>
-          <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="#">
-            <img src="/img/logo-htmlacademy.svg" class="copyright__link-logo" alt="logo">
-          </a>
-        </div>
+      <div class="page-footer__logo">
+          <a class="page-footer__logo-link" href="#">
+              <img class="page-footer__logo-img" src="/img/logo-mobile.svg" alt="Mishka">
+            </a>
       </div>
-    </footer>
+
+    <ul class="social">
+      <li>
+        <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм"></a>
+      </li>
+      <li>
+        <a class="social__link social__link--fb" href="#" aria-label="Фэйсбук"></a>
+      </li>
+      <li>
+        <a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a>
+      </li>
+    </ul>
+
+    <div class="page-footer__copyright copyright">
+      <b class="copyright__text">Разработано</b>
+      <a class="copyright__link" href="#">
+        <img src="/img/logo-htmlacademy.svg" class="copyright__link-logo" alt="logo">
+      </a>
+    </div>
+  </div>
+  </div>
+</footer>
 
     <script src="/js/menu.js"></script>
 
