--- a/source/index.html
+++ b/source/index.html
@@ -22,39 +22,44 @@
 
     <nav class="main-menu main-menu--closed main-menu--nojs">
 
-      <button class="button main-menu__button-icon" type="button" aria-label="Открыть главное меню"></button>
+        <button class="main-menu__button-icon" type="button" aria-label="Открыть главное меню"></button>
 
 
-      <div class="main-menu__wrapper">
-      <ul class="main-menu__list category-list">
-        <li class="category-list__item">
-          <a class="category-list__link" href="/catalog.html">Каталог товаров</a>
-        </li>
-        <li class="category-list__item">
-          <a class="category-list__link">Вязание на заказ</a>
-        </li>
-      </ul>
+        <ul class="main-menu__list main-menu__category-list category-list">
+          <li class="category-list__item">
+            <a class="category-list__link" href="/catalog.html">Каталог товаров</a>
+          </li>
+          <li class="category-list__item">
+            <a class="category-list__link" href="/form.html">Вязание на заказ</a>
+          </li>
+        </ul>
 
-      <ul class="main-menu__list user-list">
-        <li class="user-list__item">
-          <a class="user-list__link">Поиск</a>
-        </li>
-        <li class="user-list__item">
-          <a class="user-list__link">Корзина: пока пуста</a>
-        </li>
-      </ul>
+        <ul class="main-menu__list main-menu__user-list user-list">
+          <li class="user-list__item">
+            <a class="user-list__link">
+                <svg  class="user-list__link-img" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.6px" height="17.6px" viewBox="-0.8 -0.8 17.6 17.6" enable-background="new -0.8 -0.8 17.6 17.6" xml:space="preserve">
+                  <path fill="#231F20" d="M16.47,14.93l-3.415-3.415C14.02,10.226,14.6,8.634,14.6,6.899c0-4.253-3.447-7.699-7.7-7.699 S-0.8,2.646-0.8,6.899s3.446,7.7,7.699,7.7c1.734,0,3.326-0.58,4.613-1.546l3.417,3.416c0.203,0.202,0.418,0.33,0.771,0.33 c0.607,0,1.1-0.492,1.1-1.1C16.8,15.459,16.739,15.2,16.47,14.93z M1.399,6.899c0-3.038,2.462-5.5,5.5-5.5s5.5,2.462,5.5,5.5 s-2.462,5.5-5.5,5.5S1.399,9.938,1.399,6.899z"/>
+                </svg>
+            <p>Поиск</p>
+            </a>
+          </li>
+          <li class="user-list__item">
+            <a class="user-list__link">Корзина: пока пуста</a>
+          </li>
+        </ul>
 
-      <ul class="main-menu__list desktop-list">
-        <li class="desktop-list__item">
-          <a class="desktop-list__link">Новые поступления</a>
-        </li>
-        <li class="desktop-list__item">
-          <a class="desktop-list__link">Распродажа</a>
-        </li>
-      </ul>
-      </div>
+        <ul class="main-menu__list main-menu__desktop-list desktop-list">
+          <li class="desktop-list__item">
+            <a class="desktop-list__link">Новые поступления</a>
+          </li>
+          <li class="desktop-list__item">
+            <a class="desktop-list__link">Распродажа</a>
+          </li>
+        </ul>
 
-    </nav>
+        <span class="main-menu__list main-menu__delivery-list">Бесплатная доставка по&nbsp;России</span>
+
+      </nav>
   </div>
   </header>
 
@@ -76,7 +81,7 @@
       </li>
       <li class="category__item">
       <a class="category__item-link category__item-link--toy" href="#">
-        <span class="category__item-text">Детские игрушки</span>
+        <span class="category__item-text">Детские<br> игрушки</span>
       </a>
       </li>
     </ul>
@@ -112,13 +117,15 @@
             </table>
           </div>
           <div class="popular-item__image">
-            <img src="/img/triple-set-mobile@1x.jpg" alt="Вязаная корзинка">
+            <img class="popular-item__image-img" src="/img/triple-set-mobile@1x.jpg" alt="Вязаная корзинка">
           </div>
         </article>
       </div>
       <footer class="popular-item__footer">
         <span class="popular-item__price">Цена: 990&nbsp;руб.</span>
+        <div class="popular-item__footer-wrapper">
         <a href="#" class="popular-item__button button">Заказать</a>
+        </div>
       </footer>
       </div>
 
@@ -129,7 +136,7 @@
       <div class="features-list">
         <ul class="features-list__advantages">
           <li class="features-list__item features-list__item--eco">
-            <p class="features-list__text features-list__text--eco">Экологически чистые материалы</p>
+            <p class="features-list__text features-list__text--eco">Экологически<br> чистые материалы</p>
           </li>
           <li class="features-list__item features-list__item--style">
             <p class="features-list__text features-list__text--style">Скандинавский стиль по&nbsp;российской цене</p>
@@ -186,7 +193,9 @@
           <img src="/img/icon-right-arrow.svg" class="slider__arrow-img" alt="Следующий отзыв">
         </button>
       </div>
-      <a class="reviews__create button">Написать</a>
+      <div class="reviews__create">
+      <a class="reviews__create-btn button">Написать</a>
+      </div>
       </div>
     </section>
 
@@ -197,13 +206,13 @@
           <div class="contacts__all">
             <table class="contacts__details">
               <tbody class="contacts__details-wrapper">
-                <tr>
+                <tr class="contacts__details-row">
                   <td class="contacts__details-key">e-mail:</td>
                   <td class="contacts__details-value--email">
                     <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
                   </td>
                 </tr>
-                <tr>
+                <tr class="contacts__details-row">
                   <td class="contacts__details-key">адрес:</td>
                   <td class="contacts__details-value">г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</td>
                 </tr>
@@ -212,7 +221,7 @@
           </div>
         </div>
         <div class="contacts__map">
-          <img src="/img/map-mobile@1x.jpg" alt="Карта">
+          <img class="contacts__map-img" src="/img/map-mobile@1x.jpg" alt="Карта">
         </div>
         <div class="contacts__button-btn">
           <button type="button" class="contacts__button button">Напишите нам</button>
@@ -223,6 +232,12 @@
 
   <footer class="page-footer">
     <div class="page-footer__wrapper">
+
+      <div class="page-footer__logo">
+          <a class="page-footer__logo-link" href="#">
+              <img class="page-footer__logo-img" src="/img/logo-mobile.svg" alt="Mishka">
+            </a>
+      </div>
 
       <ul class="social">
         <li>
@@ -237,9 +252,6 @@
       </ul>
 
       <div class="page-footer__copyright copyright">
-        <a class="copyright__logo" href="#">
-          <img src="/img/logo-mobile.svg" alt="Mishka">
-        </a>
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="#">
           <img src="/img/logo-htmlacademy.svg" class="copyright__link-logo" alt="logo">
