CSS animation fixed, button sizes changed, input styles improved, map size changed

--- a/source/index.html
+++ b/source/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-  <div style="display: none;">
+  <!-- <div style="display: none;">
     <include src="build/img/sprite.svg"></include>
-  </div>
+  </div> -->
 
   <header class="page-header">
     <div class="page-header__container">
@@ -201,7 +201,7 @@
             </p>
             <cite class="review__author">
               <b class="review__author-name">Анастасия Красильникова</b>
-              <span class="review__author-nickname">@misssssiskras</span>
+              <span class="review__author-nickname"><br>@misssssiskras</span>
             </cite>
           </blockquote>
         </article>
@@ -250,7 +250,8 @@
         <div class="contacts__map" id="map">
         </div>
         <div class="contacts__button-btn">
-          <button type="button" class="contacts__button button">Напишите нам</button>
+          <a type="button" class="contacts__button button">Напишите нам</a>
+          </div>
         </div>
       </div>
     </section>
