--- a/source/form.html
+++ b/source/form.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-  <div style="display: none;">
+  <!-- <div style="display: none;">
     <include src="build/img/sprite.svg"></include>
-  </div>
+  </div> -->
 
 
 <header class="page-header">
